--- a/kubernetes/vpro-app/vprodbdep.yml
+++ b/kubernetes/vpro-app/vprodbdep.yml
@@ -15,18 +15,37 @@ spec:
         app: vprodb
     spec:
       containers:
-      - name: vprodb
-        image: imranvisualpath/8pmdbimg:v1
-        ports:
-        - name: vprodb-port
-          containerPort: 3306
-        env: 
-         - name: MYSQL_ROOT_PASSWORD
-           valueFrom:
-             secretKeyRef:
-               name: app-secret
-               key: db-pass
-#        env:
-#         - name: MYSQL_ROOT_PASSWORD
-#           value: "vprodbpass"
+        - name: vprodb
+          image:
+            vprofile/vprofiledb
+            #args:
+            #- "--ignore-db-dir"
+            #- "lost+found"
+          volumeMounts:
+            - mountPath: /var/lib/mysql
+              name: vpro-db-data
+          ports:
+            - name: vprodb-port
+              containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: app-secret
+                  key: db-pass
+      nodeSelector:
+        zone: us-east-1a
+      volumes:
+        - name: vpro-db-data
+          # This AWS EBS volume must already exist.
+          awsElasticBlockStore:
+            volumeID: MentiondVoumeID
+            fsType: ext4
 
+      initContainers:
+        - name: busybox
+          image: busybox:latest
+          args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
+          volumeMounts:
+            - name: vpro-db-data
+              mountPath: /var/lib/mysql
